--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "html-pdf": "^2.2.0",
     "inquirer": "^7.0.6",
     "util": "^0.12.2"
   }
